fix overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -2155,6 +2155,8 @@ body.admin-bar .header-menu-area.sticky_menu {
   color: #ffffff !important; }
 .post-template-default.postid-1149 .blog-details-wrapper .latest-comments li .comments-box .comments-text p {
   margin-bottom: 0; }
+.post-template-default.postid-555 .blog-details-wrapper .single-post-item .post-content .gallery {
+  margin-top: 20px; }
 
 @-webkit-keyframes MovefadeUp {
   0% {
